--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
        <a href="https://www.instagram.com/anjeetsingh_112?r=nametag"><i class='bx bxl-instagram' ></i></a>
        <a href="https://twitter.com/NITian_Aj?t=CO107ZdpTOnfh81PPCb91w&s=08"><i class='bx bxl-twitter' ></i></a>
        <a href="https://github.com/Anjeetsingh112"><i class='bx bxl-github' ></i></a>
-       <a href="/2022ugme112@nitjsr.ac.in"><i class='bx bxl-gmail' ></i></a>
+       <a href="mailto://2022ugme112@nitjsr.ac.in"><i class='bx bxl-gmail' ></i></a>
        <a href="https://in.linkedin.com/in/anjeet-singh-51716225b"><i class='bx bxl-linkedin' ></i></a>
     </div>
     <a href="" class="scroll-btn"><i class='bx bx-chevron-up'></i></a>
